versions/v4.1.0/boards/ezurio/bt610/doc/bt610.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/boards/ezurio/bt610/doc/bt610.html
original_path: boards/ezurio/bt610/doc/bt610.html
---

# Sentrius BT610 Sensor

Board Overview

[![../../../../_images/bt610.jpg](https://docs.zephyrproject.org/4.1.0/_images/bt610.jpg)
](https://docs.zephyrproject.org/4.1.0/_images/bt610.jpg)

Sentrius BT610 Sensor

Name:
:   `bt610`

Vendor:
:   Ezurio

Architecture:
:   arm

SoC:
:   nrf52840

[
Browse board sources
](https://github.com/zephyrproject-rtos/zephyr/blob/main//boards/ezurio/bt610/doc/bt610.rst/../..)

## Overview

The Sentrius™ BT610 Sensor is a battery powered, Bluetooth v5 Long Range
integrated sensor platform that uses a Nordic Semiconductor nRF52840 ARM
Cortex-M4F CPU.

The sensor has the following features:

- ADC
- CLOCK
- FLASH
- GPIO
- I2C
- MPU
- NVIC
- PWM
- QSPI
- RADIO (Bluetooth Low Energy and 802.15.4)
- RTC
- Segger RTT (RTT Console)
- SPI
- UART
- WDT

![Sentrius BT610 Sensor, rear view](https://docs.zephyrproject.org/4.1.0/_images/bt610_back.jpg)

Sentrius BT610 Sensor, rear view

More information about the board can be found at the
[Sentrius BT610 website](https://www.ezurio.com/iot-devices/iot-sensors/sentrius-bt610-io-sensor) [[1]](#id4).

## Hardware

### Supported Features

The `bt610` board supports the hardware features listed below.

on-chip / on-board
:   Feature integrated in the SoC / present on the board.

2 / 2
:   Number of instances that are enabled / disabled.   
    Click on the label to see the first instance of this feature in the board/SoC DTS files.

`vnd,foo`
:   Compatible string for the Devicetree binding matching the feature.   
    Click on the link to view the binding documentation.

#### `bt610/nrf52840` target

| Type | Location | Description | Compatible |
| --- | --- | --- | --- |
| CPU | on-chip | ARM Cortex-M4F CPU[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L19) | [`arm,cortex-m4f`](../../../../build/dts/api/bindings/cpu/arm%2Ccortex-m4f.md#std-dtcompatible-arm-cortex-m4f) |
| ADC | on-chip | Nordic Semiconductor nRF family SAADC node[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L211) | [`nordic,nrf-saadc`](../../../../build/dts/api/bindings/adc/nordic%2Cnrf-saadc.md#std-dtcompatible-nordic-nrf-saadc) |
| ARM architecture | on-chip | Nordic UICR (User Information Configuration Registers)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L42) | [`nordic,nrf-uicr`](../../../../build/dts/api/bindings/arm/nordic%2Cnrf-uicr.md#std-dtcompatible-nordic-nrf-uicr) |
| on-chip | Nordic EGU (Event Generator Unit)[6 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L324) | [`nordic,nrf-egu`](../../../../build/dts/api/bindings/arm/nordic%2Cnrf-egu.md#std-dtcompatible-nordic-nrf-egu) |
| on-chip | Nordic nRF family ACL (Access Control List)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L401) | [`nordic,nrf-acl`](../../../../build/dts/api/bindings/arm/nordic%2Cnrf-acl.md#std-dtcompatible-nordic-nrf-acl) |
| on-chip | Nordic nRF family MWU (Memory Watch Unit)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L429) | [`nordic,nrf-mwu`](../../../../build/dts/api/bindings/arm/nordic%2Cnrf-mwu.md#std-dtcompatible-nordic-nrf-mwu) |
| Audio | on-chip | Nordic PDM (Pulse Density Modulation interface)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L394) | [`nordic,nrf-pdm`](../../../../build/dts/api/bindings/audio/nordic%2Cnrf-pdm.md#std-dtcompatible-nordic-nrf-pdm) |
| Clock control | on-chip | Nordic nRF clock control node[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L52) | [`nordic,nrf-clock`](../../../../build/dts/api/bindings/clock/nordic%2Cnrf-clock.md#std-dtcompatible-nordic-nrf-clock) |
| Comparator | on-chip | Nordic nRF COMP (analog COMParator)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L313) | [`nordic,nrf-comp`](../../../../build/dts/api/bindings/comparator/nordic%2Cnrf-comp.md#std-dtcompatible-nordic-nrf-comp) |
| Counter | on-chip | Nordic nRF timer node[5 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L220) | [`nordic,nrf-timer`](../../../../build/dts/api/bindings/counter/nordic%2Cnrf-timer.md#std-dtcompatible-nordic-nrf-timer) |
| Cryptographic accelerator | on-chip | Nordic ECB (AES electronic codebook mode encryption)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L274) | [`nordic,nrf-ecb`](../../../../build/dts/api/bindings/crypto/nordic%2Cnrf-ecb.md#std-dtcompatible-nordic-nrf-ecb) |
| on-chip | Nordic nRF family CCM (AES CCM mode encryption)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L281) | [`nordic,nrf-ccm`](../../../../build/dts/api/bindings/crypto/nordic%2Cnrf-ccm.md#std-dtcompatible-nordic-nrf-ccm) |
| on-chip | ARM TrustZone CryptoCell 310[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L561) | [`arm,cryptocell-310`](../../../../build/dts/api/bindings/crypto/arm%2Ccryptocell-310.md#std-dtcompatible-arm-cryptocell-310) |
| Debug | on-chip | ARMv7 instrumentation trace macrocell[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L26) | [`arm,armv7m-itm`](../../../../build/dts/api/bindings/debug/arm%2Carmv7m-itm.md#std-dtcompatible-arm-armv7m-itm) |
| Flash controller | on-chip | Nordic NVMC (Non-Volatile Memory Controller)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L407) | [`nordic,nrf52-flash-controller`](../../../../build/dts/api/bindings/flash_controller/nordic%2Cnrf52-flash-controller.md#std-dtcompatible-nordic-nrf52-flash-controller) |
| on-chip | Properties defining the interface for the Nordic QSPI peripheral[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L507) | [`nordic,nrf-qspi`](../../../../build/dts/api/bindings/flash_controller/nordic%2Cnrf-qspi.md#std-dtcompatible-nordic-nrf-qspi) |
| GPIO & Headers | on-board | TCA9538 GPIO node[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt610/bt610.dts?plain=1#L189) | [`ti,tca9538`](../../../../build/dts/api/bindings/gpio/ti%2Ctca9538.md#std-dtcompatible-ti-tca9538) |
| on-chip | NRF5 GPIOTE node[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L203) | [`nordic,nrf-gpiote`](../../../../build/dts/api/bindings/gpio/nordic%2Cnrf-gpiote.md#std-dtcompatible-nordic-nrf-gpiote) |
| on-chip | NRF5 GPIO node[2 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L538) | [`nordic,nrf-gpio`](../../../../build/dts/api/bindings/gpio/nordic%2Cnrf-gpio.md#std-dtcompatible-nordic-nrf-gpio) |
| I2C | on-chip | Nordic nRF family TWI (TWI master)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L124) | [`nordic,nrf-twi`](../../../../build/dts/api/bindings/i2c/nordic%2Cnrf-twi.md#std-dtcompatible-nordic-nrf-twi) |
| on-chip | Nordic nRF family TWIM (TWI master with EasyDMA)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L160) | [`nordic,nrf-twim`](../../../../build/dts/api/bindings/i2c/nordic%2Cnrf-twim.md#std-dtcompatible-nordic-nrf-twim) |
| I2S | on-chip | Nordic I2S (Inter-IC sound interface)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L479) | [`nordic,nrf-i2s`](../../../../build/dts/api/bindings/i2s/nordic%2Cnrf-i2s.md#std-dtcompatible-nordic-nrf-i2s) |
| IEEE 802.15.4 | on-chip | Nordic nRF IEEE 802.15.4 node[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L101) | [`nordic,nrf-ieee802154`](../../../../build/dts/api/bindings/ieee802154/nordic%2Cnrf-ieee802154.md#std-dtcompatible-nordic-nrf-ieee802154) |
| Input | on-board | Group of GPIO-bound input keys[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt610/bt610.dts?plain=1#L55) | [`gpio-keys`](../../../../build/dts/api/bindings/input/gpio-keys.md#std-dtcompatible-gpio-keys) |
| Interrupt controller | on-chip | ARMv7-M NVIC (Nested Vectored Interrupt Controller)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/armv7-m.dtsi?plain=1#L13) | [`arm,v7m-nvic`](../../../../build/dts/api/bindings/interrupt-controller/arm%2Cv7m-nvic.md#std-dtcompatible-arm-v7m-nvic) |
| LED | on-board | Group of GPIO-controlled LEDs[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt610/bt610.dts?plain=1#L29) | [`gpio-leds`](../../../../build/dts/api/bindings/led/gpio-leds.md#std-dtcompatible-gpio-leds) |
| on-board | Group of PWM-controlled LEDs[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt610/bt610.dts?plain=1#L41) | [`pwm-leds`](../../../../build/dts/api/bindings/led/pwm-leds.md#std-dtcompatible-pwm-leds) |
| Miscellaneous | on-chip | Nordic FICR (Factory Information Configuration Registers)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L35) | [`nordic,nrf-ficr`](../../../../build/dts/api/bindings/misc/nordic%2Cnrf-ficr.md#std-dtcompatible-nordic-nrf-ficr) |
| on-chip | Nordic nRF family PPI (Programmable Peripheral Interconnect)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L423) | [`nordic,nrf-ppi`](../../../../build/dts/api/bindings/misc/nordic%2Cnrf-ppi.md#std-dtcompatible-nordic-nrf-ppi) |
| MTD | on-chip | Flash node[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L416) | [`soc-nv-flash`](../../../../build/dts/api/bindings/mtd/soc-nv-flash.md#std-dtcompatible-soc-nv-flash) |
| on-board | Fixed partitions of a flash (or other non-volatile storage) memory[2 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt610/bt610.dts?plain=1#L239) | [`fixed-partitions`](../../../../build/dts/api/bindings/mtd/fixed-partitions.md#std-dtcompatible-fixed-partitions) |
| on-board | QSPI NOR flash supporting the JEDEC CFI interface[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt610/bt610.dts?plain=1#L214) | [`nordic,qspi-nor`](../../../../build/dts/api/bindings/mtd/nordic%2Cqspi-nor.md#std-dtcompatible-nordic-qspi-nor) |
| Networking | on-chip | Nordic nRF family RADIO peripheral[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L91) | [`nordic,nrf-radio`](../../../../build/dts/api/bindings/net/wireless/nordic%2Cnrf-radio.md#std-dtcompatible-nordic-nrf-radio) |
| on-chip | Nordic nRF family NFCT (Near Field Communication Tag)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L196) | [`nordic,nrf-nfct`](../../../../build/dts/api/bindings/net/wireless/nordic%2Cnrf-nfct.md#std-dtcompatible-nordic-nrf-nfct) |
| Pin control | on-chip | The nRF pin controller is a singleton node responsible for controlling pin function selection and pin properties[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/common/nordic/nrf_common.dtsi?plain=1#L25) | [`nordic,nrf-pinctrl`](../../../../build/dts/api/bindings/pinctrl/nordic%2Cnrf-pinctrl.md#std-dtcompatible-nordic-nrf-pinctrl) |
| Power management | on-chip | Nordic nRF power control node[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L59) | [`nordic,nrf-power`](../../../../build/dts/api/bindings/power/nordic%2Cnrf-power.md#std-dtcompatible-nordic-nrf-power) |
| PWM | on-chip | nRF PWM[2 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L386)[2 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L443) | [`nordic,nrf-pwm`](../../../../build/dts/api/bindings/pwm/nordic%2Cnrf-pwm.md#std-dtcompatible-nordic-nrf-pwm) |
| on-chip | nRFx S/W PWM[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/common/nordic/nrf_common.dtsi?plain=1#L38) | [`nordic,nrf-sw-pwm`](../../../../build/dts/api/bindings/pwm/nordic%2Cnrf-sw-pwm.md#std-dtcompatible-nordic-nrf-sw-pwm) |
| Regulator | on-chip | Nordic nRF5X regulator (fixed stage of the core supply)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L83) | [`nordic,nrf5x-regulator`](../../../../build/dts/api/bindings/regulator/nordic%2Cnrf5x-regulator.md#std-dtcompatible-nordic-nrf5x-regulator) |
| on-chip | Nordic nRF52X regulator (high voltage stage of the main supply)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840_qiaa.dtsi?plain=1#L19) | [`nordic,nrf52x-regulator-hv`](../../../../build/dts/api/bindings/regulator/nordic%2Cnrf52x-regulator-hv.md#std-dtcompatible-nordic-nrf52x-regulator-hv) |
| on-board | Fixed voltage regulators[6 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt610/bt610.dts?plain=1#L88) | [`regulator-fixed`](../../../../build/dts/api/bindings/regulator/regulator-fixed.md#std-dtcompatible-regulator-fixed) |
| Retained memory | on-chip | Nordic GPREGRET (General Purpose Register Retention) device[2 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L67) | [`nordic,nrf-gpregret`](../../../../build/dts/api/bindings/retained_mem/nordic%2Cnrf-gpreget.md#std-dtcompatible-nordic-nrf-gpregret) |
| RNG | on-chip | Nordic nRF family RNG (Random Number Generator)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L267) | [`nordic,nrf-rng`](../../../../build/dts/api/bindings/rng/nordic%2Cnrf-rng.md#std-dtcompatible-nordic-nrf-rng) |
| RTC | on-chip | Nordic nRF RTC (Real-Time Counter)[3 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L250) | [`nordic,nrf-rtc`](../../../../build/dts/api/bindings/rtc/nordic%2Cnrf-rtc.md#std-dtcompatible-nordic-nrf-rtc) |
| Sensors | on-chip | Nordic nRF family TEMP node[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L260) | [`nordic,nrf-temp`](../../../../build/dts/api/bindings/sensor/nordic%2Cnrf-temp.md#std-dtcompatible-nordic-nrf-temp) |
| on-chip | Nordic nRF quadrature decoder (QDEC) node[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L306) | [`nordic,nrf-qdec`](../../../../build/dts/api/bindings/sensor/nordic%2Cnrf-qdec.md#std-dtcompatible-nordic-nrf-qdec) |
| on-board | SM351LT magnetoresistive sensor[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt610/bt610.dts?plain=1#L83) | [`honeywell,sm351lt`](../../../../build/dts/api/bindings/sensor/honeywell%2Csm351lt.md#std-dtcompatible-honeywell-sm351lt) |
| Serial controller | on-chip | Nordic nRF family UARTE (UART with EasyDMA)[2 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L115) | [`nordic,nrf-uarte`](../../../../build/dts/api/bindings/serial/nordic%2Cnrf-uarte.md#std-dtcompatible-nordic-nrf-uarte) |
| SPI | on-chip | Nordic nRF family SPIM (SPI master with EasyDMA)[3 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L142) | [`nordic,nrf-spim`](../../../../build/dts/api/bindings/spi/nordic%2Cnrf-spim.md#std-dtcompatible-nordic-nrf-spim) |
| on-chip | Nordic nRF family SPI (SPI master)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L178) | [`nordic,nrf-spi`](../../../../build/dts/api/bindings/spi/nordic%2Cnrf-spi.md#std-dtcompatible-nordic-nrf-spi) |
| SRAM | on-chip | Generic on-chip SRAM description[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L48) | [`mmio-sram`](../../../../build/dts/api/bindings/sram/mmio-sram.md#std-dtcompatible-mmio-sram) |
| Timer | on-chip | ARMv7-M System Tick[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/armv7-m.dtsi?plain=1#L21) | [`arm,armv7m-systick`](../../../../build/dts/api/bindings/timer/arm%2Carmv7m-systick.md#std-dtcompatible-arm-armv7m-systick) |
| USB | on-chip | Nordic nRF52 USB device controller[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L488) | [`nordic,nrf-usbd`](../../../../build/dts/api/bindings/usb/nordic%2Cnrf-usbd.md#std-dtcompatible-nordic-nrf-usbd) |
| Watchdog | on-chip | Nordic nRF family WDT (Watchdog Timer)[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/arm/nordic/nrf52840.dtsi?plain=1#L289) | [`nordic,nrf-wdt`](../../../../build/dts/api/bindings/watchdog/nordic%2Cnrf-wdt.md#std-dtcompatible-nordic-nrf-wdt) |

![Sentrius BT610 Sensor, board layout](https://docs.zephyrproject.org/4.1.0/_images/bt610_board.jpg)

Sentrius BT610 Sensor, board layout

### Connections and IOs

#### LED

Two LEDs are visible through the BT610 housing lid. Note that the LEDs can be
driven either directly, or via PWM. PWM should be used when current consumption
is required to be minimised.

- LED\_1 (red) = LED0 = P1.07 (Red LED 1)
- LED\_2 (green) = LED1 = P1.03 (Green LED 2)
- LED\_PWM\_1 (red) = LED0PWM = P1.07 (Red PWM LED 1)
- LED\_PWM\_2 (green) = LED1PWM = P1.03 (Green PWM LED 2)

#### Push button

The BT610 incorporates three mechanical push buttons. Note these are only
accessible with the housing cover removed.

Two of the buttons are available for use via the board DTS file, as follows.

- BUTTON\_1 = SW0 = P0.24 (Boot button SW1)
- BUTTON\_2 = SW1 = P1.01 (Tamper switch SW2)

A third mechanical push button is provided to allow reset of the on-board
microcontroller.

#### Magnetoresistive sensor

The BT610 incorporates a Honeywell SM351LT magnetoresistive sensor. Refer to
the [Honeywell SM351LT datasheet](https://sensing.honeywell.com/honeywell-sensing-nanopower-series-datasheet-50095501-c-en.pdf) [[2]](#id6) for further details.

- MAG\_1 = SW2 = P1.15 (SM3531LT\_0)

#### External flash memory

A 64Mbit external flash memory part is available for storage of application
images and data. Refer to the [Macronix MX25R6435FZNIL0 datasheet](https://www.macronix.com/Lists/Datasheet/Attachments/7913/MX25R6435F,%20Wide%20Range,%2064Mb,%20v1.5.pdf) [[6]](#id15) for further
details.

The flash memory is connected to the on-board QSPI device controller.

- MX25R64 = QSPI

#### Voltage reference

A precision 2.5V voltage reference is provided on the V\_REF input for use
during AD measurements.

This can deliver up to 50mA peak and 20mA continuous current.

#### Sensor connectivity

The BT610 incorporates three terminal blocks J5, J6 & J7 that allow
connectivity to its sensor inputs, as follows.

#### Terminal Block J5

| Pin No. | Name | Description | Direction |
| --- | --- | --- | --- |
| 1 | EXT\_SPI\_CS\_2 | External SPI CS 2 | OUT |
| 2 | GND | GND | (N/A) |
| 3 | AIN4 | Analog Input 4 | IN |
| 4 | AIN3 | Analog Input 3 | IN |
| 5 | GND | GND | (N/A) |
| 6 | AIN2 | Analog Input 2 | IN |
| 7 | AIN1 | Analog Input 1 | IN |
| 8 | GND | GND | (N/A) |
| 9 | DIN2 | Digital Input 2 | IN |
| 10 | DO2 | Digital Output 2 | OUT |

#### Terminal Block J6

| Pin No. | Name | Description | Direction |
| --- | --- | --- | --- |
| 1 | DO1 | Digital Output 1 | OUT |
| 2 | DIN1 | Digital Input 1 | IN |
| 3 | GND | GND | (N/A) |
| 4 | THERM4 | Thermistor Input 4 | IN |
| 5 | THERM3 | Thermistor Input 3 | IN |
| 6 | GND | GND | (N/A) |
| 7 | THERM2 | Thermistor Input 2 | IN |
| 8 | THERM1 | Thermistor Input 1 | IN |
| 9 | GND | GND | (N/A) |
| 10 | B+ OUT | Ext. sensor power supply | (N/A) |

#### Terminal Block J7

| Pin No. | Name | Description | Direction |
| --- | --- | --- | --- |
| 1 | UART\_1\_RTS | UART 1 RTS | IN |
| 2 | UART\_1\_CTS | UART 1 CTS | OUT |
| 3 | UART\_1\_RXD | UART 1 RXD | IN |
| 4 | UART\_1\_TXD | UART 1 TXD | OUT |
| 5 | EXT\_I2C\_SCL | External I2C SCL | OUT |
| 6 | EXT\_I2C\_SDA | External I2C SDA | IN/OUT |
| 7 | EXT\_SPI\_CLK/TRACEDATA3 | Ext. SPI CLK/TRACE DATA 3 | OUT |
| 8 | EXT\_SPI\_MISO | External SPI MISO | IN |
| 9 | EXT\_SPI\_MOSI | External SPI MOSI | OUT |
| 10 | EXT\_SPI\_CS\_1 | External SPI CS 1 | OUT |

#### Analog inputs

The four external Analog Inputs are multiplexed to a single host
microcontroller AD input, AIN\_1, via a TI TMUX1204 multiplexer.

Refer to the [TI TMUX1204 datasheet](https://www.ti.com/lit/gpn/TMUX1204) [[4]](#id10) for further details.

Signals up to 12V, to a maximum of 50mA, can be applied to the external Analog
Inputs.

External Analog Input connections are made to the multiplexer as follows.

| Input | MUX Input |
| --- | --- |
| AIN1 | S1 |
| AIN2 | S2 |
| AIN3 | S3 |
| AIN4 | S4 |

A TI TCA9538 port expander is used to determine the mode of each Analog Input,
for either voltage or current measurement, and also to control the mutliplexer.
A high level applied to the appropriate expander port pin enables the
associated analog input as a current input; when a low logic level is applied,
voltage measurement mode is selected.

Refer to the [TI TCA9538 datasheet](https://www.ti.com/lit/gpn/TCA9538) [[5]](#id13) for further details.

The expander port connections are as follows.

| Pin | Function |
| --- | --- |
| P0 | AIN1 mode |
| P1 | AIN2 mode |
| P2 | AIN3 mode |
| P3 | AIN4 mode |
| P4 | MUX A0 |
| P5 | MUX A1 |
| P6 | (N/C) |
| P7 | (N/C) |

The following illustrates some possible configuration values for the port
expander. Note that it is possible for combinations of voltage and current
measurement to be applied such that some external Analog Inputs measure current
and others voltage. This is not shown below.

| Expander value | Selected Analog Input & mode |
| --- | --- |
| b’00000000’ | AIN1, voltage measurement |
| b’00000001’ | AIN1, current measurement |
| b’00010000’ | AIN2, voltage measurement |
| b’00010010’ | AIN2, current measurement |
| b’00100000’ | AIN3, voltage measurement |
| b’00100100’ | AIN3, current measurement |
| b’00110000’ | AIN4, voltage measurement |
| b’00111000’ | AIN4, current measurement |

Circuitry associated with the analog input measurements can be disabled when
not in use.

A GPIO is used to control this behaviour, as shown below.

| ANALOG\_ENABLE | Behaviour |
| --- | --- |
| 0 | Disabled |
| 1 | Enabled |

#### Thermistor inputs

The four external thermistor inputs are connected to a single AD input, AIN\_2,
via a TI TMUX1204 multiplexer.

Refer to the [TI TMUX1204 datasheet](https://www.ti.com/lit/gpn/TMUX1204) [[4]](#id10) for further details.

External analog input connections are made to the multiplexer as follows.

| Input | MUX Input |
| --- | --- |
| THERM1 | S1 |
| THERM2 | S2 |
| THERM3 | S3 |
| THERM4 | S4 |

The same port expander used to select external analog inputs is also used to
select external thermistor inputs.

The table below defines possible values that can be written.

| Expander value | Selected Analog Input |
| --- | --- |
| b’00000000’ | THERM1 |
| b’00010000’ | THERM2 |
| b’00100000’ | THERM3 |
| b’00110000’ | THERM4 |

A GPIO line is used to enable electronics associated with thermistor
measurement. This is controlled as shown below.

| THERM\_ENABLE | Behaviour |
| --- | --- |
| 0 | Enabled |
| 1 | Disabled |

Note the thermistor circuit must be calibrated before use. A suggested method
for achieving this is described in the
[BT610 Zephyr Application Thermistor Calibration](https://www.ezurio.com/technology/bt610-thermistor-coefficient-calculator) [[7]](#id17) application note.

#### Digital inputs

Two external digital inputs are available for connection to external signals.
For the digital level being applied to be detected, an appropriate output pin
must first be set. This approach is taken to ensure supporting circuitry can be
powered down when the input state is not being determined. When in use, the
external digital input level can be read from the appropriate input pin.

The output and input pins required are as follows.

| Enable Pin | Input Read Pin |
| --- | --- |
| DIN\_1\_ENABLE | DIN\_1 |
| DIN\_2\_ENABLE | DIN\_2 |

#### Digital outputs

Two external digital outputs are available to provide signals to or to directly
drive external equipment.

To provide a high level on the external digital output, a high logic level is
applied to the appropriate host microcontroller output.

The output pins required are as follows.

| Output Pin | External Sensor Terminal |
| --- | --- |
| DO\_1\_MCU | DO1 |
| DO\_2\_MCU | DO2 |

#### External power supply

Power can be supplied to external sensors via the B+ OUT terminal. This is
enabled by setting the BATTERY\_OUTPUT\_ENABLE GPIO line. In addition, the
external supply can be boosted to 5V by setting the HIGH\_SUPPLY\_ENABLE GPIO
line. When 5V is not selected, the external power supply follows the
battery voltage.

Up to 50mA peak and 20mA continuous current can be delivered by the External
Power Supply.

#### External sensor I2C port

External I2C sensors can be connected on the external I2C port. Note that
external I2C sensors should be powered from the B+ terminal to ensure applied
voltage levels match those expected internally by the board.

Required pins are as follows.

| Output Pin | External Sensor Terminal |
| --- | --- |
| SCL\_PIN | EXT\_I2C\_SCL |
| SDA\_PIN | EXT\_I2C\_SDA |

#### External sensor SPI port

Up to 2 external SPI sensors can be connected on the external SPI port. Note
that external SPI sensors should be powered from the B+ terminal to ensure
applied voltage levels match those expected internally by the board.

Required pins are as follows.

| Output Pin | External Sensor Terminal |
| --- | --- |
| SCK\_PIN | EXT\_I2C\_SCL |
| MOSI\_PIN | EXT\_I2C\_SDA |
| MISO\_PIN | EXT\_SPI\_MISO |
| SDA\_PIN | EXT\_I2C\_SDA |
| CS\_GPIOS | EXT\_I2C\_SDA |
| CS\_GPIOS | EXT\_I2C\_SDA |

## Programming and Debugging

Applications for the `bt610` board configuration can be
built and flashed in the usual way (see [Building an Application](../../../../develop/application/index.md#build-an-application)
and [Run an Application](../../../../develop/application/index.md#application-run) for more details); however, the standard
debugging targets are not currently available.

The BT610 features a 10 way header, J3, for connection of a
programmer/debugger, with pinout as follows.

| Pin No. | Name | Description |
| --- | --- | --- |
| 1 | 3.3V | Power Supply, 3.3V |
| 2 | SWDIO | Data Input/Output |
| 3 | GND | GND |
| 4 | SWDCLK | Clock Pin |
| 5 | GND | GND |
| 6 | SWO | Trace Output Pin |
| 7 | (N/C) | Not Connected |
| 8 | (N/C) | Not Connected |
| 9 | GND | GND |
| 10 | nRESET | Reset Pin |

Access to the sensor debug UART is facilitated by a 6 pin header, J1, with
pinout as follows.

| Pin No. | Name | Description | Direction |
| --- | --- | --- | --- |
| 1 | GND | GND | N/A |
| 2 | UART\_0\_RTS | UART 0 RTS Pin | IN |
| 3 | 3.3V | Power Supply, 3.3V | N/A |
| 4 | UART\_0\_RX | UART 0 RX Pin | IN |
| 5 | UART\_0\_TX | UART 0 TX Pin | OUT |
| 6 | UART\_0\_CTS | UART 0 CTS Pin | OUT |

Note that pin 3 requires a solder bridge to be closed to enable powering of the
BT610 board via the UART connector.

### Flashing

Follow the instructions in the [Nordic nRF5x Segger J-Link](../../../../develop/flash_debug/nordic_segger.md#nordic-segger) page to install
and configure all the necessary software. Further information can be
found in [Flashing](../../../../develop/flash_debug/nordic_segger.md#nordic-segger-flashing). Then build and flash
applications as usual (see [Building an Application](../../../../develop/application/index.md#build-an-application) and
[Run an Application](../../../../develop/application/index.md#application-run) for more details).

Here is an example for the [Hello World](../../../../samples/hello_world/README.md#hello_world "Print "Hello World" to the console.") application.

First, run your favorite terminal program to listen for output.

NOTE: On the BT610, the UART lines are at TTL levels and must be passed through
an appropriate line driver circuit for translation to RS232 levels. Refer to
the [MAX3232 datasheet](https://www.ti.com/lit/ds/symlink/max3232.pdf) [[3]](#id8) for a suitable driver IC.

```shell
$ minicom -D <tty_device> -b 115200
```

Replace `<tty_device>` with the port where the BT610 can be found. For
example, under Linux, `/dev/ttyUSB0`.

Then build and flash the application in the usual way.

```shell
# From the root of the zephyr repository
west build -b bt610 samples/hello_world
west flash
```

Note that an external debugger is required to perform application flashing.

### Debugging

The `bt610` board does not have an on-board J-Link debug IC
as some nRF5x development boards, however, instructions from the
[Nordic nRF5x Segger J-Link](../../../../develop/flash_debug/nordic_segger.md#nordic-segger) page also apply to this board, with the additional step
of connecting an external debugger.

## Testing Bluetooth on the BT610

Many of the Bluetooth examples will work on the BT610.
Try them out:

- [Peripheral](../../../../samples/bluetooth/peripheral/README.md#ble_peripheral "Implement basic Bluetooth LE Peripheral role functionality (advertising and exposing GATT services).")
- [Eddystone](../../../../samples/bluetooth/eddystone/README.md#bluetooth_eddystone "Export an Eddystone Configuration Service as a Bluetooth LE GATT service.")
- [iBeacon](../../../../samples/bluetooth/ibeacon/README.md#bluetooth_ibeacon "Advertise an Apple iBeacon using GAP Broadcaster role.")

## Testing the LEDs and buttons on the BT610

There are 2 samples that allow you to test that the buttons (switches) and LEDs
on the board are working properly with Zephyr:

- [Blinky](../../../../samples/basic/blinky/README.md#blinky "Blink an LED forever using the GPIO API.")
- [Button](../../../../samples/basic/button/README.md#button "Handle GPIO inputs with interrupts.")

You can build and flash the examples to make sure Zephyr is running correctly
on your board. The button, LED and sensor device definitions can be found in
[boards/ezurio/bt610/bt610.dts](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt610/bt610.dts).

## References

[[1](#id5)]

[https://www.ezurio.com/iot-devices/iot-sensors/sentrius-bt610-io-sensor](https://www.ezurio.com/iot-devices/iot-sensors/sentrius-bt610-io-sensor)

[[2](#id7)]

[https://sensing.honeywell.com/honeywell-sensing-nanopower-series-datasheet-50095501-c-en.pdf](https://sensing.honeywell.com/honeywell-sensing-nanopower-series-datasheet-50095501-c-en.pdf)

[[3](#id9)]

[https://www.ti.com/lit/ds/symlink/max3232.pdf](https://www.ti.com/lit/ds/symlink/max3232.pdf)

[4]
([1](#id11),[2](#id12))

[https://www.ti.com/lit/gpn/TMUX1204](https://www.ti.com/lit/gpn/TMUX1204)

[[5](#id14)]

[https://www.ti.com/lit/gpn/TCA9538](https://www.ti.com/lit/gpn/TCA9538)

[[6](#id16)]

[https://www.macronix.com/Lists/Datasheet/Attachments/7913/MX25R6435F,%20Wide%20Range,%2064Mb,%20v1.5.pdf](https://www.macronix.com/Lists/Datasheet/Attachments/7913/MX25R6435F,%20Wide%20Range,%2064Mb,%20v1.5.pdf)

[[7](#id18)]

[https://www.ezurio.com/technology/bt610-thermistor-coefficient-calculator](https://www.ezurio.com/technology/bt610-thermistor-coefficient-calculator)
